<resources>
    <string name="app_name">Data Bencana</string>
    <string name="recent">Terkini</string>
    <string name="home">Beranda</string>
    <string name="archive">Arsip</string>
    <string name="notification">Notifikasi</string>
    <string name="settings">Pengaturan</string>
    <string name="disaster_filter">Filter Bencana</string>
    <string name="disaster_type">Jenis Bencana</string>
    <string name="start_time">Mulai Tanggal</string>
    <string name="end_time">Tanggal Akhir</string>
    <string name="region">Daerah</string>
    <string name="province">Provinsi</string>
    <string name="filter">Filter</string>
    <string name="indonesia">Indonesia</string>
    <string name="province_is_not_found">Provinsi tidak ditemukan!\nTips: Pilih provinsi yang muncul di rekomendasi ketika mengetik</string>
    <string name="start_date_should_not_be_empty">Tanggal awal tidak boleh kosong!</string>
    <string name="end_date_should_not_be_empty">Tanggal akhir tidak boleh kosong!</string>
    <string name="end_date_should_not_be_bigger_than_today">Tanggal akhir tidak boleh melebihi tanggal hari ini!</string>
    <string name="start_date_should_not_be_bigger_than_end_date">Tanggal awal tidak boleh melebihi tanggal akhir!</string>
    <string name="time_difference_not_more_than_217_days">Selisih tidak boleh lebih dari 217 hari!</string>
    <string name="choose_filter">Pilih Tipe Bencana, Lokasi, dan Periode</string>
    <string name="disaster_data_is_empty">Tidak ada data bencana</string>
    <string name="profile">Profil</string>
    <string name="disaster_list">Daftar Bencana</string>
    <string name="dark_mode">Mode Gelap</string>
</resources>