<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FilterFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/disaster_filter" />

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?attr/actionBarSize">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_margin="24dp"
            app:cardCornerRadius="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="24dp">

                <TextView
                    android:id="@+id/label_disaster_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/disaster_type"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/input_disaster_type"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/label_disaster_type"
                    app:layout_constraintBottom_toBottomOf="@id/label_disaster_type"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/label_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_time"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/label_disaster_type" />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    app:layout_constraintTop_toTopOf="@id/label_start_time"
                    app:layout_constraintBottom_toBottomOf="@id/label_start_time"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/label_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_time"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/label_start_time" />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    app:layout_constraintTop_toTopOf="@id/label_end_time"
                    app:layout_constraintBottom_toBottomOf="@id/label_end_time"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/label_region"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/province"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/label_end_time" />

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/label_region"
                    app:layout_constraintBottom_toBottomOf="@id/label_region"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <Button
                    android:id="@+id/btn_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/label_region"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>